--- a/docs/challenges/c9.md
+++ b/docs/challenges/c9.md
@@ -32,7 +32,7 @@ sqlmap -u "https://studentportal.elfu.org/application-check.php?elfmail=McElfin%
 ![Token Response](../img/challenges/c9/c9_2.png)
 ![Sqlmap Fail](../img/challenges/c9/c9_3.png)
 
-The problem can be solved by translating the `validator.php` response data to a format that sqlmap accepts (i.e. contains a token field name in the header or response body). Pepper's hint refers to sqlmap [tamper scripts](https://pen-testing.sans.org/blog/2017/10/13/sqlmap-tamper-scripts-for-the-win) as a way to solve this but the below [Flask proxy script](../scripts/token_proxy.py.md) does the job as well. When the script receives a GET request it grabs a token value from `validator.php` and adds it as a value to a `token` field in both the header and body of its own HTTP response. 
+The problem can be solved by translating the `validator.php` response data to a format that sqlmap accepts (i.e. contains a token field name in the header or response body). When the below [Flask proxy script](../scripts/token_proxy.py.md) script receives a GET request it grabs a token value from `validator.php` and adds it as the value to a `token` field in both the header and body of its own HTTP response. 
 
 ```python
 #!/usr/bin/env python3
@@ -71,7 +71,7 @@ python3 token_proxy.py
 ![Flask Proxy](../img/challenges/c9/c9_5.png)
 ![Proxy Token Response](../img/challenges/c9/c9_4_both.png)
 
-Now run the earlier sqlmap command again but with the `--csrf-url` parameter set to 'http://127.0.0.1:5000' and `--csrf-token` to 'token'. This will allow sqlmap to send valid HTTP requests to the server and execute its blind SQLi attacks.
+Now run the earlier sqlmap command again but with the `--csrf-url` parameter set to our proxy listening on 127.0.0.1:5000 and `--csrf-token` set to 'token'. This will allow sqlmap to send valid HTTP requests to the server and execute its SQLi attacks.
 
 ```shell
 sqlmap -u "https://studentportal.elfu.org/application-check.php?elfmail=McElfin%40example.com&token=y" \
