--- a/docs/challenges/c11.md
+++ b/docs/challenges/c11.md
@@ -1,5 +1,5 @@
 # Open the Sleigh Shop Door
-**Hint**: [Kent Tinseltooth - "Smart Braces"](../hints/h11.md)
+**Hint**: [Kent Tinseltooth - Smart Braces](../hints/h11.md)
 
 ## Request
 > Psst - hey!  
@@ -105,15 +105,15 @@ Select each `chakra` class and set it to active to reveal the code in between th
 ### Lock 10
 **Riddle**: *Oh, no! This lock's out of commission! Pop off the cover and locate what's missing.*
 
-Unlike the previous 9 locks this one can't be solved with one or two clicks. Start by removing the `cover` class from the div which will uncover, pun intended, the inside of the lock. In the bottom right hand corner, vertically, and in small print is the code `KD29XJ37`.
+Unlike the previous 9 locks this one requires a little more work to solve. Start by dragging the `cover` div outside of the lock to uncover, pun intended, the circuitry. Removing the `cover` class from the div works as well but the drag option results in a cooler visual. In the bottom right hand corner, vertically, and in small print you'll find `KD29XJ37`.
 
 ![Lock 10 Inside](../img/challenges/c11/c11_10.png)
 
-Try entering the code and be greeted with an error in the JavaScript console, stating 'Error: Missing Macaroni!'. The problem is there's three different classes, `macaroni` being one of them, missing on the div that previously had the `cover` class enabled.
+Try entering the code and be greeted with an error in the JavaScript console, stating 'Error: Missing Macaroni!'. The problem is there's three different components, `macaroni` being one of them, missing inside the lock div.
 
 ![Obfuscated JavaScript](../img/challenges/c11/c11_11.png)
 
-We will need to deobfuscate the JavaScript code to better understand what exactly it's trying to check inside of that `try/catch` block. One option is to use the developer tools JavaScript console to evaluate small pieces of the code. For example, entering `_0x3170('0x56')` in the console will print "Missing macaroni!". Rinse and repeat until the code becomes more readable.
+Taking the long route, deobfuscate the JavaScript code to better understand what exactly it's trying to check inside of that `try/catch` block. One option is to use the developer tools JavaScript console to evaluate small pieces of the code. For example, entering `_0x3170('0x56')` in the console will print "Missing macaroni!". Rinse and repeat until the code becomes more readable.
 
 ![Deobfuscating JavaScript](../img/challenges/c11/c11_12.png)
 
@@ -140,12 +140,13 @@ try {
 }
 ```
 
-It appears that the three component, defined as CSS classes, we're missing on this lock are `macaroni`, `swab`, and `gnome`. You will find 3 divs  containing each of the required classes spread around the DOM. Fix things by dragging all of them inside of the lock div and you'll be able to open this final lock using the code `KD29XJ37`.
+It appears that the three components, defined as CSS classes, we're missing on this lock are `macaroni`, `swab`, and `gnome`. You will find 3 divs containing each of the required classes spread around the DOM. Fix things by dragging all of them inside of the lock div and you'll be able to open this final lock using the code `KD29XJ37`. Alternatively you can replace the `cover` class with `component macaroni swab gnome` and add a `data-code` parameter with a random value to the same div, but like before you'll miss out on some funny visuals.
 
 ![Lock 10](../img/challenges/c11/c11_13.png)
-![Note](../img/challenges/c11/c11_14.png)
 
-Say whaaaaaa?! The Tooth Fairy is behind all of this madness?
+Once all 10 locks have been opened the page displays Shinny Upatree's note. 
+
+![Note](../img/challenges/c11/c11_14.png)
 
 ## Answer
 Villain's name : `The Tooth Fairy`
