--- a/docs/challenges/c3.md
+++ b/docs/challenges/c3.md
@@ -1,5 +1,5 @@
 # Evaluate Attack Outcome
-**Hint**: [Bushy Evergreen - "Escape Ed"](../hints/h3.md)
+**Hint**: [Bushy Evergreen - Escape Ed](../hints/h3.md)
 
 ## Request
 > We're seeing attacks against the Elf U domain!  
