--- a/docs/challenges/c4.md
+++ b/docs/challenges/c4.md
@@ -1,5 +1,5 @@
 # Determine Attacker Technique
-**Hint**: [SugarPlum Mary - "Linux Path"](../hints/h4.md)
+**Hint**: [SugarPlum Mary - Linux Path](../hints/h4.md)
 
 ## Request
 > Using these [normalized Sysmon logs](https://downloads.elfu.org/sysmon-data.json.zip), identify the tool the attacker used to retrieve domain password hashes from the lsass.exe process. For hints on achieving this objective, please visit Hermey Hall and talk with SugarPlum Mary.
