--- a/docs/challenges/c5.md
+++ b/docs/challenges/c5.md
@@ -1,5 +1,5 @@
 # Determine Compromised System
-**Hint**: [Sparkle Redberry - "Xmas Cheer Laser"](../hints/h5.md)
+**Hint**: [Sparkle Redberry - Xmas Cheer Laser](../hints/h5.md)
 
 ## Request
 > The attacks don't stop!  
