--- a/docs/challenges/c6.md
+++ b/docs/challenges/c6.md
@@ -1,5 +1,5 @@
 # Splunk
-**Hint**: [Tangle Coalbox - "Frosty Keypad"](../hints/h6.md)
+**Hint**: [Tangle Coalbox - Frosty Keypad](../hints/h6.md)
 
 ## Request
 > Hi, I'm Dr. Banas, professor of Cheerology at Elf University.  
