--- a/docs/challenges/c7.md
+++ b/docs/challenges/c7.md
@@ -1,5 +1,5 @@
 # Get Access to the Steam Tunnels
-**Hint**: [Minty Candycane - "Holiday Hack Trail"](../hints/h7.md)
+**Hint**: [Minty Candycane - Holiday Hack Trail](../hints/h7.md)
 
 ## Request
 > Gain access to the steam tunnels.  
@@ -35,11 +35,9 @@ Use the key grinder in Minty's dorm room, enter `122520` for the cuts, and giggl
 
 ![Key Grinder](../img/challenges/c7/c7_6.png)
 
-Download the `122520.png` file and use it on the lock in the dorm room closet. A hidden door will open, revealing a message on the wall that reads 'This is it'. Follow the steam tunnels to meet up with the mysterious figure you first saw running away in Minty's room.
+Download the `122520.png` file and use it on the lock in the dorm room closet. A hidden door will open, revealing a message on the wall that reads 'This is it'. Follow the steam tunnels to meet up with the mysterious figure you first saw running away in Minty's room. He'll introduce himself as Krampus Hollyfeld and explain why he borrowed Jane and Michael.
 
 ![Steam Tunnels](../img/challenges/c7/c7_7.png)
-
-He'll introduce himself as Krampus Hollyfeld and explain why he borrowed Jane and Michael.
 
 ## Answer
 Who took the doves: `Krampus Hollyfeld`
