--- a/docs/challenges/c8.md
+++ b/docs/challenges/c8.md
@@ -1,5 +1,5 @@
 # Bypassing the Frido Sleigh CAPTEHA
-**Hint**: [Alabaster Snowball - "Nyanshell"](../hints/h8.md)
+**Hint**: [Alabaster Snowball - Nyanshell](../hints/h8.md)
 
 ## Request
 > Help Krampus beat the [Frido Sleigh contest](https://fridosleigh.com/).  
@@ -134,8 +134,6 @@ The remainder of Krampus' `capteha_api.py` script submits the list of UUIDs and,
 ![CAPTEHA Bypassed](../img/challenges/c8/c8_2.png)
 ![Server Response](../img/challenges/c8/c8_3.png)
 ![Email](../img/challenges/c8/c8_4.png)
-
-Looks like our winning Frido Sleigh Continuous Cookie Contest code is `8Ia8LiZEwvyZr2WO`.
 
 ## Answer
 Email code: `8Ia8LiZEwvyZr2WO`
