--- a/docs/challenges/c9.md
+++ b/docs/challenges/c9.md
@@ -1,5 +1,5 @@
 # Retrieve the Scraps of Paper from Server
-**Hint**: [Pepper Minstix - "Graylog"](../hints/h9.md)
+**Hint**: [Pepper Minstix - Graylog](../hints/h9.md)
 
 ## Request
 > Gain access to the data on the [Student Portal](https://studentportal.elfu.org/) server and retrieve the paper scraps hosted there.  
@@ -111,8 +111,6 @@ sqlmap -u "https://studentportal.elfu.org/application-check.php?elfmail=McElfin%
 Well that looks pretty promising. Download the PNG files from the Student Portal and reassemble them using an image editor.
 
 ![Letter](../img/challenges/c9/letter.png)
-
-Looks we're still missing an important piece of the letter which could help identify our attacker and solve this whole mystery, but at least we now know the name of Santa's cutting-edge sleigh guidance system, `Super Sled-o-matic`.
 
 ## Answer
 Sleigh guidance system name: `Super Sled-o-matic`
