--- a/docs/hints/h10.md
+++ b/docs/hints/h10.md
@@ -1,4 +1,4 @@
-# Holly Evergreen - "Mongo Pilfer"
+# Holly Evergreen - Mongo Pilfer
 ![Holly Evergreen](../img/hints/h10/holly_evergreen.png){: .elf_avatar}
 
 **Challenge**: [Recover Cleartext Document](../challenges/c10.md)
@@ -18,21 +18,19 @@
 ## Solution
 First determine the port that MongoDB is listening on by executing `ps ax`.
 
-![Processes](../img/hints/h10/h10_terminal1_win.png)
+![Processes](../img/hints/h10/h10_terminal1.png)
 
 Next, connect to MongoDB using `mongo 127.0.0.1:12121 --quiet` and list all databases with `show databases`.
 
 ![Show Databases](../img/hints/h10/h10_terminal2.png)
 
-Open the 'elfu' database with `use elfu` and show the available collections by issuing the command `show collections`. The 'solution' collection seems a likely candidate to contain quiz answers so use `db.solution.find()` to list its documents.
+Open the 'elfu' database with `use elfu` and show the available collections by issuing the command `show collections`. The 'solution' collection seems a likely candidate to contain quiz answers. Use `db.solution.find()` to list its documents.
 
 ![Show Collections](../img/hints/h10/h10_terminal3.png)
 
-Run `db.loadServerScripts();displaySolution();` as instructed.
+Now run `db.loadServerScripts();displaySolution();` as instructed.
 
-![Run Command](../img/hints/h10/h10_terminal4.png)
-
-Awesome! All quizzes can now be graded! Oh, wait...
+![Run Command](../img/hints/h10/h10_terminal4_everyone.png)
 
 ## Answer
 See [solution](#solution).
