--- a/docs/hints/h12.md
+++ b/docs/hints/h12.md
@@ -1,4 +1,4 @@
-# Wunorse Openslae - "Zeek JSON Analysis"
+# Wunorse Openslae - Zeek JSON Analysis
 ![Wunorse Openslae](../img/hints/h12/wunorse_openslae.png){: .elf_avatar}
 
 **Challenge**: [Filter Out Poisoned Data Sources](../challenges/c12.md)
