--- a/docs/hints/h4.md
+++ b/docs/hints/h4.md
@@ -1,4 +1,4 @@
-# SugarPlum Mary - "Linux Path"
+# SugarPlum Mary - Linux Path
 ![SugarPlum Mary](../img/hints/h4/sugarplum_mary.png){: .elf_avatar}
 
 **Challenge**: [Determine Attacker Technique](../challenges/c4.md)
