--- a/docs/hints/h5.md
+++ b/docs/hints/h5.md
@@ -1,4 +1,4 @@
-# Sparkle Redberry - "Xmas Cheer Laser"
+# Sparkle Redberry - Xmas Cheer Laser
 ![Sparkle Redberry](../img/hints/h5/sparkle_redberry.png){: .elf_avatar}
 
 **Challenge**: [Determine Compromised System](../challenges/c5.md)
