--- a/docs/challenges/c10.md
+++ b/docs/challenges/c10.md
@@ -1,5 +1,5 @@
 # Recover Cleartext Document
-**Hint**: [Holly Evergreen - "Mongo Pilfer"](../hints/h10.md)
+**Hint**: [Holly Evergreen - Mongo Pilfer](../hints/h10.md)
 
 ## Request
 > The [Elfscrow Crypto](https://downloads.elfu.org/elfscrow.exe) tool is a vital asset used at Elf University for encrypting SUPER SECRET documents.  
@@ -135,7 +135,7 @@ The correct key is found on attempt 4850 which tells us the file was encrypted o
 
 ![PDF Cover](../img/challenges/c10/c10_7.png)
 
-Sweet! [Super Sled-O-Matic quick-start guide v1.2](../files/ElfUResearchLabsSuperSledOMaticQuickStartGuideV1.2.pdf) successfully decrypted! Someone needs to have a serious talk with Santa and explain to him that ElfScrow version 1.01 is in urgent need of an update though. Way too much DES and PRNG shenanigans and I'd have some serious reservations slapping my name on the whole 'the only encryption trusted by Santa!' tagline if I were him. Anyway, the five words in the middle of the cover read 'Machine Learning Sleigh Route Finder'.
+Sweet! [Super Sled-O-Matic quick-start guide v1.2](../files/ElfUResearchLabsSuperSledOMaticQuickStartGuideV1.2.pdf) successfully decrypted! Someone needs to have a serious talk with Santa and explain to him that ElfScrow version 1.01 is in urgent need of an update though. Way too much DES and PRNG shenanigans and I'd have some serious reservations slapping my name on the whole 'the only encryption trusted by Santa!' tagline if I were him.
 
 ## Answer
 Middle line on the cover page: `Machine Learning Sleigh Route Finder`
