--- a/docs/hints/h11.md
+++ b/docs/hints/h11.md
@@ -1,4 +1,4 @@
-# Kent Tinseltooth - "Smart Braces"
+# Kent Tinseltooth - Smart Braces
 ![Kent Tinseltooth](../img/hints/h11/kent_tinseltooth.png){: .elf_avatar}
 
 **Challenge**: [Open the Sleigh Shop Door](../challenges/c11.md)
