--- a/docs/hints/h3.md
+++ b/docs/hints/h3.md
@@ -1,4 +1,4 @@
-# Bushy Evergreen - "Escape Ed"
+# Bushy Evergreen - Escape Ed
 ![Bushy Evergreen](../img/hints/h3/bushy_evergreen.png){: .elf_avatar}
 
 **Challenge**: [Evaluate Attack Outcome](../challenges/c3.md)
