--- a/docs/hints/h6.md
+++ b/docs/hints/h6.md
@@ -1,4 +1,4 @@
-# Tangle Coalbox - "Frosty Keypad"
+# Tangle Coalbox - Frosty Keypad
 ![Tangle Coalbox](../img/hints/h6/tangle_coalbox.png){: .elf_avatar}
 
 **Challenge**: [Splunk](../challenges/c6.md)
