--- a/docs/hints/h7.md
+++ b/docs/hints/h7.md
@@ -1,4 +1,4 @@
-# Minty Candycane - "Holiday Hack Trail"
+# Minty Candycane - Holiday Hack Trail
 ![Minty Candycane](../img/hints/h7/minty_candycane.png){: .elf_avatar}
 
 **Challenge**: [Get Access to the Steam Tunnels](../challenges/c7.md)
@@ -33,8 +33,6 @@ Now press the `Go` button.
 
 ![We Won](../img/hints/h7/h7_terminal4.png)
 
-Tadaaaa! *"Your party has succeeded!"*
-
 ### Medium
 Solving the challenge on 'medium' really isn't all that different. Instead of manipulating the `distance` in the URL we now change the `distance` value in the HTML body. Click on `medium`, then click the `buy` button, open up your browser's developer tools, and edit the value of the input tag named `distance`.
 
@@ -43,8 +41,6 @@ Solving the challenge on 'medium' really isn't all that different. Instead of ma
 Press the `Go` button.
 
 ![We Won](../img/hints/h7/h7_terminal6.png)
-
-And once again, *"Your party has succeeded!"*
 
 ## Answer
 - Easy: change the `distance` parameter in the URL.
