--- a/docs/hints/h8.md
+++ b/docs/hints/h8.md
@@ -1,4 +1,4 @@
-# Alabaster Snowball - "Nyanshell"
+# Alabaster Snowball - Nyanshell
 ![Alabaster Snowball](../img/hints/h8/alabaster_snowball.png){: .elf_avatar}
 
 **Challenge**: [Bypassing the Frido Sleigh CAPTEHA](../challenges/c8.md)
