--- a/docs/hints/h9.md
+++ b/docs/hints/h9.md
@@ -1,4 +1,4 @@
-# Pepper Minstix - "Graylog"
+# Pepper Minstix - Graylog
 ![Pepper Minstix](../img/hints/h9/pepper_minstix.png){: .elf_avatar}
 
 **Challenge**: [Retrieve the Scraps of Paper from Server](../challenges/c9.md)
