--- a/docs/challenges/c12.md
+++ b/docs/challenges/c12.md
@@ -74,7 +74,7 @@ cat IPs_bad.csv | cut -d$'\t' -f 1,5 | grep -vEi '.*UNION|:;.*'
 
 ![User-Agent](../img/challenges/c12/c12_7.png)
 
-While not all of these jump out as suspicious, a few definitely do. The below [Python script](../scripts/match_user_agents.py.md) takes 2 CSV files with `id.orig_h`, `host`, `username`, `uri`, and `user_agent` fields from the Zeek logs as input. One log containing only the bad IPs and the other containing everything. If we find more than 3 matches for a specific IP address (i.e. more than 2 additional values) then chances are we're including legitimate traffic so we ignore those just to be on the safe side.
+While not all of these jump out as suspicious, a few definitely do. The below [Python script](../scripts/match_user_agents.py.md) takes 2 CSV files with `id.orig_h`, `host`, `username`, `uri`, and `user_agent` fields from the Zeek logs as input. One log containing only the clearly bad IPs and the other containing all of them. If we find more than 3 matches for a specific IP address (i.e. more than 2 additional values) then chances are we're including legitimate traffic so we ignore those just to be on the safe side.
 
 ```python
 #!/usr/bin/env python3
