Script doc header fix.

--- a/docs/challenges/c12.md
+++ b/docs/challenges/c12.md
@@ -78,7 +78,7 @@ While not all of these jump out as suspicious, a few definitely do. The below [P
 
 ```python
 #!/usr/bin/env python3
-"""Find matching user_agent strings."""
+"""KringleCon 2 - Filter Out Poisoned Data Sources Challenge."""
 
 
 def main():
