--- a/docs/challenges/c9.md
+++ b/docs/challenges/c9.md
@@ -36,7 +36,7 @@ The problem can be solved by translating the `validator.php` response data to a 
 
 ```python
 #!/usr/bin/env python3
-# token_proxy.py
+"""KringleCon 2 - Retrieve Scraps of Paper from Server Challenge."""
 import requests
 from flask import Flask, Response
 app = Flask(__name__)
