--- a/docs/hints/h6.md
+++ b/docs/hints/h6.md
@@ -24,7 +24,7 @@ Based on the hints and the keypad image we see that 1, 3, 7, and 'enter' are the
 
 ```python
 #!/usr/bin/env python3
-"""Tangle Coalbox - Frosty Keypad challenge."""
+"""KringleCon 2 - Frosty Keypad Hint."""
 import itertools
 
 
