Add youtube videos

--- a/docs/challenges/c10.md
+++ b/docs/challenges/c10.md
@@ -8,6 +8,11 @@
 > We know that it was encrypted on December 6, 2019, between 7pm and 9pm UTC.  
 > What is the middle line on the cover page? (Hint: it's five words)
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/PPbELj4PeKk?start=123" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [Elfscrow Crypto Binary](https://downloads.elfu.org/elfscrow.exe)
 - [Elfscrow Debug Symbols](https://downloads.elfu.org/elfscrow.pdb)
