--- a/docs/challenges/c11.md
+++ b/docs/challenges/c11.md
@@ -10,6 +10,11 @@
 > The only way you could would be if you could break into [my crate](https://crate.elfu.org/), here.  
 > You see, I've written the villain's name down on a piece of paper and hidden it away securely!
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0hpKaJUhUMg?start=158" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [Crate](https://crate.elfu.org/)
 - [Chrome Developer Tools](https://developers.google.com/web/tools/chrome-devtools)
