--- a/docs/challenges/c12.md
+++ b/docs/challenges/c12.md
@@ -6,6 +6,11 @@
 > Submit the Route ID ("RID") success value that you're given.  
 > For hints on achieving this objective, please visit the Sleigh Shop and talk with Wunorse Openslae.
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4CS02y-G5zA?start=211" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [Zeek JSON logs](https://downloads.elfu.org/http.log.gz)
 - [Parsing Zeek JSON Logs with JQ](https://pen-testing.sans.org/blog/2019/12/03/parsing-zeek-json-logs-with-jq-2)
