--- a/docs/challenges/c2.md
+++ b/docs/challenges/c2.md
@@ -6,6 +6,11 @@
 > What is the first word in ALL CAPS in the subject line of the letter?  
 > Please find the letter in the Quad.  
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/PmHcVRry17w?start=242" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [Threatening letter](https://downloads.elfu.org/LetterToElfUPersonnel.pdf)
 
