--- a/docs/challenges/c3.md
+++ b/docs/challenges/c3.md
@@ -6,6 +6,11 @@
 > Using the [event log data](https://downloads.elfu.org/Security.evtx.zip), identify the user account that the attacker compromised using a password spray attack.  
 > Bushy Evergreen is hanging out in the train station and may be able to help you out.
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/qKo2HZOZzZ4?start=33" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [Event log data](https://downloads.elfu.org/Security.evtx.zip)
 - [DeepBlueCLI Github](https://github.com/sans-blue-team/DeepBlueCLI)
