--- a/docs/challenges/c5.md
+++ b/docs/challenges/c5.md
@@ -6,6 +6,11 @@
 > Can you help identify the IP address of the malware-infected system using these [Zeek logs](https://downloads.elfu.org/elfu-zeeklogs.zip)?  
 > For hints on achieving this objective, please visit the Laboratory and talk with Sparkle Redberry.
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1Cl2-iRDNX4?start=747" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [Zeek logs](https://downloads.elfu.org/elfu-zeeklogs.zip)
 - [Real Intelligence Threat Analytics (RITA)](https://www.activecountermeasures.com/free-tools/rita/)
