--- a/docs/challenges/c6.md
+++ b/docs/challenges/c6.md
@@ -10,6 +10,11 @@
 > Apparently, I can find out more information from this [website](https://splunk.elfu.org/) with the username: elf / Password: elfsocks.  
 > I don't know anything about computer security. Can you please help me?
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gTlCl6FR_0Q?start=235" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [Elf University Splunk](https://splunk.elfu.org/)
 - [Elf University File Archive](http://elfu-soc.s3-website-us-east-1.amazonaws.com)
