--- a/docs/challenges/c7.md
+++ b/docs/challenges/c7.md
@@ -6,6 +6,11 @@
 > Who took the turtle doves? Please tell us their first and last name.  
 > For hints on achieving this objective, please visit Minty's dorm room and talk with Minty Candy Cane.
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2GLzeTbg_tg?start=220" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [Key and Lock Decoding Tools](https://github.com/deviantollam/decoding)
 - [Deviant Ollam, Optical Decoding of Keys](https://www.youtube.com/watch?v=KU6FJnbkeLA)
