--- a/docs/challenges/c8.md
+++ b/docs/challenges/c8.md
@@ -14,6 +14,11 @@
 > I've already cataloged [12,000 images](https://downloads.elfu.org/capteha_images.tar.gz) and decoded the [API interface](https://downloads.elfu.org/capteha_api.py).  
 > Can you help me bypass the CAPTEHA and submit lots of entries?
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/zYifAGvMEw4?start=182" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [fridosleigh.com](https://fridosleigh.com/)
 - [Image Training Data](https://downloads.elfu.org/capteha_images.tar.gz)
