--- a/docs/challenges/c9.md
+++ b/docs/challenges/c9.md
@@ -12,6 +12,11 @@
 > I give you permission to hack into it, solving Objective 9 in your badge.  
 > And, as long as you're traveling around, be sure to solve any other challenges you happen across.
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/FLEDsBv0Rhc?start=900" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [Student Portal](https://studentportal.elfu.org/)
 - [OWASP SQL Injection](https://www.owasp.org/index.php/SQL_injection)
