--- a/docs/hints/h11.md
+++ b/docs/hints/h11.md
@@ -12,6 +12,11 @@
 > I'll bet you can keep other students out of my head, so to speak.  
 > It might just take a bit of Iptables work.
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/0hpKaJUhUMg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [How to configure iptables on CentOS](https://upcloud.com/community/tutorials/configure-iptables-centos/)
 
