--- a/docs/hints/h12.md
+++ b/docs/hints/h12.md
@@ -11,6 +11,11 @@
 > Please use jq to find the longest connection in this data set.  
 > We have to kick out any and all grinchy activity!
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4CS02y-G5zA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [Parsing Zeek JSON Logs with JQ](https://pen-testing.sans.org/blog/2019/12/03/parsing-zeek-json-logs-with-jq-2)
 
