--- a/docs/hints/h3.md
+++ b/docs/hints/h3.md
@@ -11,6 +11,11 @@
 > Even the hint is ugly. Why can't I just use Gedit?  
 > Please help me just quit the grinchy thing.  
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/qKo2HZOZzZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [Ed Is The Standard Text Editor](http://cs.wellesley.edu/~cs249/Resources/ed_is_the_standard_text_editor.html) 
 
