--- a/docs/hints/h5.md
+++ b/docs/hints/h5.md
@@ -11,6 +11,11 @@
 > It spreads holiday cheer across the Earth ...  
 > ... when it's working!  
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1Cl2-iRDNX4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [SANS' PowerShell Cheat Sheet](https://blogs.sans.org/pen-testing/files/2016/05/PowerShellCheatSheet_v41.pdf) 
 
