--- a/docs/hints/h6.md
+++ b/docs/hints/h6.md
@@ -14,6 +14,11 @@
 > 2\. The code is a prime number.  
 > 3\. You can probably tell by looking at the keypad which buttons are used.  
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gTlCl6FR_0Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - *"One digit is repeated once, it's prime, and you can see which keys were used"*
 
