--- a/docs/hints/h7.md
+++ b/docs/hints/h7.md
@@ -12,6 +12,11 @@
 > One is about web application penetration testing.  
 > Good luck, and don't get dysentery!  
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2GLzeTbg_tg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [Chris Elgee, Web Apps: A Trailhead](https://youtu.be/0T6-DQtzCgM) 
 
