--- a/docs/hints/h8.md
+++ b/docs/hints/h8.md
@@ -12,6 +12,11 @@
 > When I try to overwrite it with something else, I get permission errors.  
 > Have you heard any chatter about immutable files? And what is sudo -l telling me?  
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/zYifAGvMEw4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - *"On Linux, a user's shell is determined by the contents of /etc/passwd"*  
 - *"sudo -l says I can run a command as root. What does it do?"* 
