--- a/docs/hints/h9.md
+++ b/docs/hints/h9.md
@@ -17,6 +17,11 @@
 > Just mouse-over the box in the lower-right corner.  
 > Login with the username elfustudent and password elfustudent.
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/FLEDsBv0Rhc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [Graylog Docs](http://docs.graylog.org/en/3.1/pages/queries.html)
 
