--- a/docs/challenges/c1.md
+++ b/docs/challenges/c1.md
@@ -14,6 +14,10 @@
 > Not sure where to start? Try hopping around campus and talking to some elves.  
 > If you help my elves with some quicker problems, they'll probably remember clues for the objectives.  
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/PmHcVRry17w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
 ## Resources
 - None
 
