--- a/docs/hints/h10.md
+++ b/docs/hints/h10.md
@@ -12,6 +12,11 @@
 > Either way, you'll need to know a teensy bit of Mongo once you're in.  
 > Pretty please find us the solution to the quiz!
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/PPbELj4PeKk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - [MongoDB Documentation](https://docs.mongodb.com/manual/reference/command/listDatabases/#dbcmd.listDatabases)
 
