--- a/docs/hints/h4.md
+++ b/docs/hints/h4.md
@@ -13,6 +13,11 @@
 > 2\. How can I find a file with a specific name?  
 > 3\. What happens if there are multiple executables with the same name in my $PATH?  
 
+## Video
+<div class="video-wrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3ubzur7HyP8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 ## Resources
 - *"Green words matter, files must be found, and the terminal's $PATH matters."* 
 
