--- a/docs/objectives/o11.md
+++ b/docs/objectives/o11.md
@@ -156,7 +156,7 @@ Once all 10 locks have been opened the page displays Shinny Upatree's note.
 ## Answer
 Villain's name : `The Tooth Fairy`
 
-## Hint
+## Response
 > Wha - what?? You got into my crate?!  
 > Well that's embarrassing...  
 > But you know what? Hmm... If you're good enough to crack MY security...  
