--- a/docs/objectives/o3.md
+++ b/docs/objectives/o3.md
@@ -38,5 +38,5 @@ Out of the three accounts that had successful logons `supatree` is the only one 
 ## Answer
 Account: `supatree`
 
-## Hint
+## Response
 None
