--- a/docs/objectives/o4.md
+++ b/docs/objectives/o4.md
@@ -29,5 +29,5 @@ MITRE ATT&CK technique [T1003](https://attack.mitre.org/techniques/T1003/) cover
 ## Answer
 Tool: `ntdsutil`
 
-## Hint
+## Response
 None
