--- a/docs/objectives/o5.md
+++ b/docs/objectives/o5.md
@@ -29,5 +29,5 @@ The 'Score' column in the 'Beacons' section is already sorted in descending orde
 ## Answer
 IP: `192.168.134.130`
 
-## Hint
+## Response
 None
