--- a/docs/objectives/o6.md
+++ b/docs/objectives/o6.md
@@ -193,7 +193,7 @@ index=main sourcetype=stoq "results{}.workers.smtp.subject"="Holiday Cheer Assig
 7. `bradly.buttercups@eifu.org`
 8. `Kent you are so unfair. And we were going to make you the king of the Winter Carnival.`
 
-## Hint
+## Response
 > Oh, thanks so much for your help! Sorry I was freaking out.  
 > I've got to talk to Kent about using my email again...  
 > ...and picking up my dry cleaning.
