--- a/docs/objectives/o7.md
+++ b/docs/objectives/o7.md
@@ -47,7 +47,7 @@ Download the `122520.png` file and use it on the lock in the dorm room closet. A
 ## Answer
 Who took the doves: `Krampus Hollyfeld`
 
-## Hint
+## Response
 > Hello there! I’m Krampus Hollyfeld.  
 > I maintain the steam tunnels underneath Elf U,  
 > Keeping all the elves warm and jolly.  
