--- a/docs/objectives/o8.md
+++ b/docs/objectives/o8.md
@@ -58,7 +58,7 @@ The default 299 x 299 image resolution used in `retrain.py` far exceeds what we 
  https://tfhub.dev/google/imagenet/mobilenet_v1_100_128/quantops/feature_vector/3
 ```
 
-Once training is complete grab all the functions and remaining code from the [`predict_images_using_trained_model.py`](https://github.com/chrisjd20/img_rec_tf_ml_demo/blob/master/predict_images_using_trained_model.py) demo script and add them to `capteha_api.py`. Be sure to update both the `input_height` and `input_width` parameters in the `read_tensor_from_image_bytes` function to match the value defined by the selected Mobilenet model as well. A few code snippets from the updated [`capteha_api.py`](/scripts/#capteha_apipy) Python script are highlighted below. 
+Once training is complete grab all the functions and remaining code from the [`predict_images_using_trained_model.py`](https://github.com/chrisjd20/img_rec_tf_ml_demo/blob/master/predict_images_using_trained_model.py) demo script and add them to `capteha_api.py`. Be sure to update both the `input_height` and `input_width` parameters in the `read_tensor_from_image_bytes` function to match the value defined by the selected Mobilenet model as well. A few code snippets from the updated [`capteha_api.py`](../scripts.md#capteha_apipy) Python script are highlighted below. 
 
 Request a CAPTEHA, store the image data, and parse out the image types we need to select.
 
@@ -143,7 +143,7 @@ The remainder of Krampus' `capteha_api.py` script submits the list of UUIDs and,
 ## Answer
 Email code: `8Ia8LiZEwvyZr2WO`
 
-## Hint
+## Response
 > You did it! Thank you so much. I can trust you!  
 > To help you, I have flashed the firmware in your badge to unlock a useful new feature:  
 > magical teleportation through the steam tunnels.  
