--- a/docs/objectives/o9.md
+++ b/docs/objectives/o9.md
@@ -37,7 +37,7 @@ sqlmap -u "https://studentportal.elfu.org/application-check.php?elfmail=McElfin%
 ![Token Response](../img/objectives/o9/o9_2.png)
 ![Sqlmap Fail](../img/objectives/o9/o9_3.png)
 
-The problem can be solved by translating the `validator.php` response data to a format that sqlmap accepts (i.e. contains a token field name in the header or response body). When the below [`token_proxy.py`](/scripts/#token_proxypy) Python script receives a GET request it grabs a token value from `validator.php` and adds it as the value to a `token` field in both the header and body of its own HTTP response. 
+The problem can be solved by translating the `validator.php` response data to a format that sqlmap accepts (i.e. contains a token field name in the header or response body). When the below [`token_proxy.py`](../scripts.md#token_proxypy) Python script receives a GET request it grabs a token value from `validator.php` and adds it as the value to a `token` field in both the header and body of its own HTTP response. 
 
 ```python
 #!/usr/bin/env python3
@@ -120,7 +120,7 @@ Well that looks pretty promising. Download the PNG files from the Student Portal
 ## Answer
 Sleigh guidance system name: `Super Sled-o-matic`
 
-## Hint
+## Response
 > Wow! We’ve uncovered quite a nasty plot to destroy the holiday season.  
 > We’ve gotta stop whomever is behind it!  
 > I managed to find this protected document on one of the compromised machines in our environment.  
