--- a/docs/hints/h6.md
+++ b/docs/hints/h6.md
@@ -25,7 +25,7 @@
 ## Solution
 ![Keypad](../img/hints/h6/h6_terminal1_yeeaaah.png)
 
-Based on the hints and the keypad image we see that 1, 3, 7, and 'enter' are the keys that are used most frequently. Since one of the 3 digits is also repeated once the total code has a length of 4. This limits the options to [permutations](https://en.wikipedia.org/wiki/Permutation) of the following 3 number sets: [1, 1, 3, 7], [1, 3, 3, 7], and [1, 3, 7, 7]. Finally our 4-digit number needs to be prime. To help solve this we can use the following [`find_code.py`](/scripts/#find_codepy) Python script.
+Based on the hints and the keypad image we see that 1, 3, 7, and 'enter' are the keys that are used most frequently. Since one of the 3 digits is also repeated once the total code has a length of 4. This limits the options to [permutations](https://en.wikipedia.org/wiki/Permutation) of the following 3 number sets: [1, 1, 3, 7], [1, 3, 3, 7], and [1, 3, 7, 7]. Finally our 4-digit number needs to be prime. To help solve this we can use the following [`find_code.py`](../scripts.md#find_codepy) Python script.
 
 ```python
 #!/usr/bin/env python3
